--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Sorts+Mill+Goudy&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,6 +8,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Eudoxus Sans', sans-serif;
+  font-family: 'Sorts Mill Goudy', serif;
   scroll-behavior: smooth;
 }
